feat: Update primary color and theme styles
This commit refactors the primary color to a darker shade of green and adjusts related styling to match. It also updates the animation keyframes for color consistency and ensures checkboxes use the new primary color.

Additionally, a new `RepeatIcon` component has been added to the icons library.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
               vazir: ['Vazirmatn', 'sans-serif'],
             },
             colors: {
-              primary: '#2563EB',
-              primarySoft: '#E8F0FF',
+              primary: '#486966',
+              primarySoft: '#eef2f2',
             },
             animation: {
               'fade-in-out': 'fadeInOut 3s ease-in-out forwards',
@@ -36,9 +36,9 @@
                 '50%': { opacity: .7 },
               },
               highlightPulse: {
-                '0%': { outline: '2px solid rgba(37, 99, 235, 0.7)', outlineOffset: '2px' },
-                '70%': { outline: '2px solid rgba(37, 99, 235, 0.2)', outlineOffset: '2px' },
-                '100%': { outline: '2px solid rgba(37, 99, 235, 0)', outlineOffset: '2px' },
+                '0%': { outline: '2px solid rgba(72, 105, 102, 0.7)', outlineOffset: '2px' },
+                '70%': { outline: '2px solid rgba(72, 105, 102, 0.2)', outlineOffset: '2px' },
+                '100%': { outline: '2px solid rgba(72, 105, 102, 0)', outlineOffset: '2px' },
               }
             }
           },
@@ -79,8 +79,8 @@
         transition: all 150ms;
       }
       input[type="checkbox"]:checked {
-        background-color: #2563EB;
-        border-color: #2563EB;
+        background-color: #486966;
+        border-color: #486966;
       }
       input[type="checkbox"]:checked::before {
         content: '';
@@ -94,7 +94,7 @@
         transform: rotate(45deg);
       }
       input[type="checkbox"]:focus-visible {
-        outline: 2px solid #BFDBFE;
+        outline: 2px solid #b2bebf;
         outline-offset: 2px;
       }
       input[type="checkbox"]:hover {
