feat: Implement new color palette and work item styling
Introduces a comprehensive color palette for labels and due dates, enhancing visual distinction. Updates `WorkItemCard` to utilize these new colors for improved semantic styling of work item types and their due date statuses. Also refactors `ErrorBoundary` state initialization for better TypeScript compatibility.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
             colors: {
               primary: '#486966',
               primarySoft: '#eef2f2',
+              'label-neutral-bg': '#E5E7EB',
+              'label-neutral-text': '#1F2937',
+              'label-blue-bg': '#DBEAFE',
+              'label-blue-text': '#1E40AF',
+              'label-amber-bg': '#FEF3C7',
+              'label-amber-text': '#92400E',
+              'label-red-bg': '#FEE2E2',
+              'label-red-text': '#991B1B',
+              'due-far': 'rgba(16, 185, 129, 0.15)',
+              'due-far-text': '#065f46',
+              'due-midfar': 'rgba(52, 211, 153, 0.2)',
+              'due-midfar-text': '#047857',
+              'due-approaching': 'rgba(245, 158, 11, 0.2)',
+              'due-approaching-text': '#92400E',
+              'due-near': 'rgba(251, 146, 60, 0.25)',
+              'due-near-text': '#B45309',
+              'due-today': '#F97316',
+              'due-overdue': '#DC2626',
+              'due-overdue-strong': '#B91C1C',
             },
             animation: {
               'fade-in-out': 'fadeInOut 3s ease-in-out forwards',
