feat(ManageViews): Add icons and translations for modal
Adds new icons (MagnifyingGlass, Star, Pencil) and comprehensive translations for the "Manage Views" modal. This prepares the UI for new functionality related to view management, including searching, pinning, and other view manipulation actions. Also updates React DOM version.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     "@tiptap/extension-text-style": "https://aistudiocdn.com/@tiptap/extension-text-style@^3.9.1",
     "@tiptap/react": "https://aistudiocdn.com/@tiptap/react@^3.9.1",
     "@tiptap/extension-character-count": "https://aistudiocdn.com/@tiptap/extension-character-count@^3.9.1",
-    "@tiptap/suggestion": "https://aistudiocdn.com/@tiptap/suggestion@^3.9.1"
+    "@tiptap/suggestion": "https://aistudiocdn.com/@tiptap/suggestion@^3.9.1",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
   }
 }
 </script>
