feat: Add rich text editor table and image support
Integrates Tiptap extensions for tables and images into the rich text editor. This includes adding necessary dependencies to package.json and introducing new styles for table cells, headers, images, and selection outlines. Icons for table and image insertion have also been added to the icon library.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,53 @@
       input[type="checkbox"]:hover {
         border-color: #94a3b8;
       }
+
+      /* --- NEW STYLES for Rich Text Editor Tables & Images --- */
+      .prose .ProseMirror table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 1rem 0;
+        table-layout: fixed;
+        overflow: hidden; /* for rounded corners */
+      }
+      .prose .ProseMirror th, .prose .ProseMirror td {
+        border: 1px solid #CBD5E1;
+        padding: 0.5rem 0.75rem;
+        vertical-align: top;
+        position: relative;
+        min-width: 3em;
+      }
+      .prose .ProseMirror th {
+        font-weight: bold;
+        background-color: #F1F5F9;
+        text-align: start !important; /* Force alignment for RTL/LTR */
+      }
+      .prose .ProseMirror .selectedCell:after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: rgba(72, 105, 102, 0.15);
+        pointer-events: none;
+        z-index: 2;
+      }
+      .prose .ProseMirror .column-resize-handle {
+        position: absolute;
+        right: -2px;
+        top: 0;
+        bottom: 0;
+        width: 4px;
+        cursor: col-resize;
+        background-color: #b2bebf;
+      }
+      .prose .ProseMirror img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 4px;
+      }
+      .prose .ProseMirror img.ProseMirror-selectednode {
+        outline: 3px solid #486966;
+      }
+      /* --- END NEW STYLES --- */
     </style>
   <script type="importmap">
 {
@@ -138,7 +185,14 @@
     "@tiptap/react": "https://aistudiocdn.com/@tiptap/react@^3.9.1",
     "@tiptap/extension-character-count": "https://aistudiocdn.com/@tiptap/extension-character-count@^3.9.1",
     "@tiptap/suggestion": "https://aistudiocdn.com/@tiptap/suggestion@^3.9.1",
-    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+    "@tiptap/extension-table": "https://aistudiocdn.com/@tiptap/extension-table@^3.9.1",
+    "@tiptap/extension-table-cell": "https://aistudiocdn.com/@tiptap/extension-table-cell@^3.9.1",
+    "@tiptap/extension-table-header": "https://aistudiocdn.com/@tiptap/extension-table-header@^3.9.1",
+    "@tiptap/extension-table-row": "https://aistudiocdn.com/@tiptap/extension-table-row@^3.9.1",
+    "@tiptap/extension-image": "https://aistudiocdn.com/@tiptap/extension-image@^3.9.1",
+    "@tiptap/extension-text-align": "https://aistudiocdn.com/@tiptap/extension-text-align@^3.9.1",
+    "@tiptap/extension-heading": "https://aistudiocdn.com/@tiptap/extension-heading@^3.9.1"
   }
 }
 </script>
