feat: Refactor epic progress calculation
Update `getEpicProgressData` to use pre-calculated fields on the `Epic` object, simplifying the logic and improving performance. This change also simplifies the `ReportsDashboard` component by removing the need to pass `workItems` to `getEpicProgressData`.

Additionally, a minor UI enhancement is included by setting a default text color for the body.

Also includes a minor fix to `ErrorBoundary` state initialization for better type safety and compatibility.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
       }
     </script>
     <style>
-      /* Base font size */
+      /* Base font size and color */
       body {
         font-size: 14px;
+        color: #1e293b; /* slate-800 */
       }
       /* Custom scrollbar updated to new palette */
       ::-webkit-scrollbar {
