--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
     "@tiptap/extension-table-row": "https://aistudiocdn.com/@tiptap/extension-table-row@^3.9.1",
     "@tiptap/extension-image": "https://aistudiocdn.com/@tiptap/extension-image@^3.9.1",
     "@tiptap/extension-text-align": "https://aistudiocdn.com/@tiptap/extension-text-align@^3.9.1",
-    "@tiptap/extension-heading": "https://aistudiocdn.com/@tiptap/extension-heading@^3.9.1"
+    "@tiptap/extension-heading": "https://aistudiocdn.com/@tiptap/extension-heading@^3.9.1",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
   }
 }
 </script>
